fix/footer status link added and fixed broken layout

--- a/ui/summit-2023/src/components/common/Footer/Footer.module.scss
+++ b/ui/summit-2023/src/components/common/Footer/Footer.module.scss
@@ -18,5 +18,5 @@
 .link {
   color: var(--color-medium-grey) !important;
   cursor: pointer !important;
-  display: flex !important;
+  margin-left: 5px;
 }
